testdata/zkc/invalid/inline_01.zkc
//error:2:3-9:not permitted on memory declaration
#[inline]
pub input data(address:u16) -> (byte:u8)

fn main() {
    var x:u8 = data[0]
}
